--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>g3 Architects</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h3>g3 Architects</h3>
         <nav>
-            <ul><a href="Home">Home</a></ul>
-            <ul><a href="About">About</a></ul>
-            <ul><a href="Contact Us">Contact Us</a></ul>
-            <ul><a href="Login">Login</a></ul>
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul>
+            <li><a href="Home">Home</a></li>
+            <li><a href="About">About</a></li>
+            <li><a href="Contact Us">Contact Us</a></li>
+            <li><a href="Login">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New <br> 
+                    Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-image" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
