--- a/index.html
+++ b/index.html
@@ -1,37 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
             <ul>
-            <li><a href="Home">Home</a></li>
-            <li><a href="About">About</a></li>
-            <li><a href="Contact Us">Contact Us</a></li>
-            <li><a href="Login">Login</a></li>
+                <li><a href="Home">Home</a></li>
+                <li><a href="About">About</a></li>
+                <li><a href="Contact Us">Contact Us</a></li>
+                <li><a href="Login">Login</a></li>
             </ul>
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-title">Brand New <br> 
+                <h1 class="banner-title">Brand New <br>
                     Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img class="banner-image" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
-
+        <!-- teams section -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-content-title"><span style="color:#727272;">Quick list</span> <strong>of
+                        Our</strong><br><span style="color: #FF900E;">Features</span></h3>
+                <p class="teams-content-description">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features section -->
+         <section class="features">
+            <div class="features-content">
+                <h2 class="features-title">Features you will <br> love & enjoy</h2>
+                <p style="color: #727272;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features-card">
+                    <h4 class="features-card-title">Dexktop & Mobile Version</h4>
+                    <p class="features-card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-card-title">Drag & Drop Builder</h4>
+                    <p class="features-card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-card-title">Awesome Modern Design</h4>
+                    <p class="features-card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-card-title">Super Easy to Edit</h4>
+                    <p class="features-card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="features-banner">
+                <img src="images/architect.png" alt="">
+            </div>
+         </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
